@@ -19,12 +19,12 @@ version_rel_time_zone = Pacific/Auckland
 
 [Prereq]
 
-Dist::Zilla::Plugin::AutoVersion::Relative = 0.01006104
+Dist::Zilla::Plugin::AutoVersion::Relative = 0.01034313
 Dist::Zilla = 4.101612
 Dist::Zilla::Plugin::GithubMeta = 0.08
 Dist::Zilla::Plugin::PodWeaver = 3.093321
-Dist::Zilla::Plugin::MetaProvides = 1.11
-Dist::Zilla::Plugin::MetaProvides::Package = 1.11
+Dist::Zilla::Plugin::MetaProvides = 1.11034201
+Dist::Zilla::Plugin::MetaProvides::Package = 1.11034304
 Dist::Zilla::Plugin::ReadmeFromPod = 0.12
 Dist::Zilla::Plugin::CompileTests = 1.101800
 Dist::Zilla::Plugin::Git = 1.102040
@@ -33,13 +33,13 @@ Dist::Zilla::Plugin::ReportVersions::Tiny = 1.01
 Dist::Zilla::Plugin::KwaliteeTests = 1.101420
 Dist::Zilla::Plugin::PortabilityTests = 1.101420
 Dist::Zilla::Plugin::EOLTests = 0.02
-Dist::Zilla::Plugin::MetaData::BuiltWith = 0.01000022
+Dist::Zilla::Plugin::MetaData::BuiltWith = 0.01005122
 Test::EOL               = 0.8
 Net::SSLeay             = 1.36
 IO::Socket::SSL         = 0
 Pod::Coverage::TrustPod = 0
 Test::CPAN::Meta        = 0
-MooseX::Has::Sugar = 0.05
+MooseX::Has::Sugar = 0.05044
 Moose = 1.01
 namespace::autoclean = 0.09
 MooseX::Types = 0.21
