@@ -173,7 +173,7 @@ sub bundle_config {
     [ 'ManifestSkip'          => {} ],
     [ 'Manifest'              => {} ],
     [ 'AutoPrereq'            => {} ],
-    [ 'MetaData::BuiltWith'   => {} ],
+    [ 'MetaData::BuiltWith'   => { show_uname => 1, uname_args => qw{ -s -o -r -m -i } } ],
     [ 'CompileTests'          => {} ],
     [ 'MetaTests'             => {} ],
     [ 'PodCoverageTests'      => {} ],
@@ -181,10 +181,10 @@ sub bundle_config {
     [ 'ReportVersions::Tiny'  => {} ],
     [ 'KwaliteeTests'         => {} ],
     [ 'PortabilityTests'      => {} ],
-    [ 'EOLTests'              => { trailing_whitespace => 1, } ],
-    [ 'ExtraTests'            => {} ],
-    [ 'TestRelease'           => {} ],
-    [ 'ConfirmRelease'        => {} ],
+    [ 'EOLTests'       => { trailing_whitespace => 1, } ],
+    [ 'ExtraTests'     => {} ],
+    [ 'TestRelease'    => {} ],
+    [ 'ConfirmRelease' => {} ],
     _if_twitter(
       $arg,
       [ [ 'FakeRelease' => { user => 'KENTNL' }, ], [ 'Twitter' => $twitter_conf, ], ],
